Update visa application details in index.html
Updated visa details including name, passport number, and visa dates.

--- a/index.html
+++ b/index.html
@@ -4,21 +4,17 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- ✅ TITLE درست برای سرچ -->
 <title>Pakistan Online Visa Application – Official Portal</title>
 
-<!-- ✅ SEO -->
 <meta name="description" content="Pakistan Online Visa Application – Official Portal. Check visa status and application details online.">
 <meta name="author" content="Pakistan Online Visa">
 
-<!-- ✅ Open Graph (گوگل + QR + Share) -->
 <meta property="og:title" content="Pakistan Online Visa Application – Official Portal">
 <meta property="og:description" content="Official Pakistan Online Visa Application Portal">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://qahirahmdzai8-afk.github.io/Muhmad-tahir-Ahmadzai-visa-application/">
 <meta property="og:site_name" content="Pakistan Online Visa">
 
-<!-- ✅ Twitter -->
 <meta name="twitter:card" content="summary">
 <meta name="twitter:title" content="Pakistan Online Visa Application – Official Portal">
 <meta name="twitter:description" content="Official Pakistan Online Visa Application Portal">
@@ -30,14 +26,11 @@
   box-sizing:border-box;
   font-family: Arial, Helvetica, sans-serif;
 }
-
 body{
   background:#ffffff;
   color:#6a6a6a;
   padding:0 28px;
 }
-
-/* ===== HEADER ===== */
 .header{
   background:#ffffff;
   padding:18px 28px;
@@ -46,7 +39,6 @@ body{
   justify-content:space-between;
   position:relative;
 }
-
 .header::after{
   content:"";
   position:absolute;
@@ -56,25 +48,20 @@ body{
   height:1px;
   background:#e1e1e1;
 }
-
 .logo{
   display:flex;
   align-items:center;
   margin-left:-28px;
 }
-
 .logo img{
   height:42px;
 }
-
 .menu-btn{
   font-size:28px;
   color:#1f4fa3;
   margin-right:-28px;
   cursor:pointer;
 }
-
-/* ===== MENU ===== */
 .menu{
   position:absolute;
   top:70px;
@@ -85,7 +72,6 @@ body{
   display:none;
   z-index:1000;
 }
-
 .menu a{
   display:block;
   padding:12px 16px;
@@ -94,76 +80,61 @@ body{
   font-size:15px;
   border-bottom:1px solid #f0f0f0;
 }
-
 .menu a:last-child{
   border-bottom:none;
 }
-
-/* ===== CARD ===== */
 .card{
   max-width:380px;
   margin:48px auto;
   background:#f5f5f5;
 }
-
 .top-line{
   width:64px;
   height:4px;
   background:#1f4fa3;
 }
-
 .content{
   padding:36px 26px 36px;
   text-align:center;
 }
-
-/* ===== TEXT ===== */
 .ref-title{
   color:#1f4fa3;
   font-size:20px;
   font-weight:600;
   margin-top:18px;
 }
-
 .ref-number{
   margin-top:14px;
   font-size:26px;
   font-weight:700;
   color:#1f4fa3;
 }
-
 .divider{
   height:1px;
   background:#dddddd;
   margin:28px 0;
 }
-
 .photo{
   width:200px;
   margin:0 auto 30px;
 }
-
 .photo img{
   width:100%;
 }
-
 .label{
   margin-top:28px;
   font-size:15px;
   font-weight:600;
   color:#8a8a8a;
 }
-
 .value{
   margin-top:10px;
   font-size:18px;
   color:#5a5a5a;
 }
-
 .back-btn{
   margin-top:40px;
 }
-
 .back-btn a{
   display:inline-block;
   background:#1f4fa3;
@@ -172,8 +143,6 @@ body{
   text-decoration:none;
   font-size:18px;
 }
-
-/* ===== OFFICIAL DOUBLE LOADER ===== */
 .loader{
   position:fixed;
   top:0;
@@ -186,7 +155,6 @@ body{
   justify-content:center;
   z-index:9999;
 }
-
 .double-ring{
   width:80px;
   height:80px;
@@ -197,7 +165,6 @@ body{
   animation:spin 1.2s linear infinite;
   position:relative;
 }
-
 .double-ring::after{
   content:"";
   position:absolute;
@@ -210,11 +177,9 @@ body{
   border-bottom:3px solid #1f4fa3;
   border-left:3px solid #1f4fa3;
 }
-
 @keyframes spin{
   100%{ transform:rotate(360deg); }
 }
-
 .page{
   display:none;
 }
@@ -256,10 +221,10 @@ body{
     </div>
 
     <div class="label">NAME</div>
-    <div class="value">Ahmad Zai Waheed</div>
+    <div class="value">Mohammadi Wahed ullah</div>
 
     <div class="label">Passport No</div>
-    <div class="value">P04265057</div>
+    <div class="value">01507510</div>
 
     <div class="label">Passport Country</div>
     <div class="value">Afghanistan</div>
@@ -276,11 +241,12 @@ body{
     <div class="label">Staying Facility</div>
     <div class="value">Multiple Entry – Upto 1 Year</div>
 
+    <!-- ✅ فقط این دو تاریخ اصلاح شد -->
     <div class="label">Visa Start Date</div>
-    <div class="value">11 Nov 2025</div>
+    <div class="value">27 Jan 2026</div>
 
     <div class="label">Visa End Date</div>
-    <div class="value">11 May 2026</div>
+    <div class="value">26 Jul 2026</div>
 
     <div class="label">Visa Duration</div>
     <div class="value">60 Day(s)</div>
@@ -300,7 +266,6 @@ window.onload = function(){
     document.getElementById("page").style.display="block";
   },1500);
 };
-
 document.getElementById("menuBtn").onclick=function(){
   var m=document.getElementById("menu");
   m.style.display=(m.style.display==="block")?"none":"block";
