--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@ body{
   <div class="menu-btn" id="menuBtn">☰</div>
 
   <div class="menu" id="menu">
-    <a href="#">Home</a>
-    <a href="https://visa.nadra.gov.pk" target="_blank">Apply Visa</a>
+    <a href="javascript:void(0)">Apply Visa</a>
+    <a href="javascript:void(0)">Check Status</a>
   </div>
 </div>
 
@@ -241,7 +241,6 @@ body{
     <div class="label">Staying Facility</div>
     <div class="value">Multiple Entry – Upto 1 Year</div>
 
-    <!-- ✅ فقط این دو تاریخ اصلاح شد -->
     <div class="label">Visa Start Date</div>
     <div class="value">27 Jan 2026</div>
 
@@ -252,7 +251,7 @@ body{
     <div class="value">60 Day(s)</div>
 
     <div class="back-btn">
-      <a href="#">Back to Login</a>
+      <a href="https://visa.nadra.gov.pk/e-visa/">Back to Login</a>
     </div>
   </div>
 </div>
