Enhance styles and add footer copyright section
Added box shadow to card and updated styles for labels and values. Included footer copyright section.

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@ body{
   max-width:380px;
   margin:48px auto;
   background:#f5f5f5;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.05); /* اضافه شدن سایه ملایم عین اصلی */
 }
 .top-line{
   width:64px;
@@ -120,18 +121,24 @@ body{
 }
 .photo img{
   width:100%;
+  border: 1px solid #ddd;
 }
+
+/* ✅ دیزاین نویشته ها عین اصلی رقم شد */
 .label{
-  margin-top:28px;
+  margin-top:25px;
   font-size:15px;
-  font-weight:600;
-  color:#8a8a8a;
+  font-weight:bold;
+  color:#8e8e8e; /* رنگ خاکستری عناوین */
+  text-transform: uppercase;
 }
 .value{
-  margin-top:10px;
-  font-size:18px;
-  color:#5a5a5a;
+  margin-top:8px;
+  font-size:19px;
+  color:#4a4a4a; /* رنگ تیره تر مقادیر */
+  font-weight: 500;
 }
+
 .back-btn{
   margin-top:40px;
 }
@@ -142,7 +149,21 @@ body{
   padding:14px 36px;
   text-decoration:none;
   font-size:18px;
+  font-weight: bold;
 }
+
+/* ✅ بخش کپی‌رایت انتهای صفحه مطابق تصویر */
+.footer-copy {
+  text-align: center;
+  margin-top: 40px;
+  margin-bottom: 20px;
+  font-size: 11px;
+  color: #333;
+  font-weight: bold;
+  line-height: 1.5;
+  text-transform: uppercase;
+}
+
 .loader{
   position:fixed;
   top:0;
@@ -254,6 +275,11 @@ body{
       <a href="https://visa.nadra.gov.pk/e-visa/">Back to Login</a>
     </div>
   </div>
+</div>
+
+<div class="footer-copy">
+  COPYRIGHT © 2015 - 2026 MINISTRY OF INTERIOR, <br> 
+  GOVERNMENT OF PAKISTAN – V: 5.5.9
 </div>
 
 </div>
